# voowork-desktop

./: .env.example  .gitignore  AGENTS.md  README.md  index.html  opencode.jsonc  package-lock.json  package.json  skills-lock.json  vite.config.ts
src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: blur_policy.json
src-tauri/src/: app_state.rs  env.rs  error.rs  icons.rs  lib.rs  locale.rs  main.rs  models.rs  navigation.rs  permissions.rs  seed.rs  tray.rs
src-tauri/src/activity/: automation.rs  constants.rs  mod.rs  tracker.rs
src-tauri/src/app_focus/: mod.rs
src-tauri/src/auth/: api.rs  api_models.rs  client.rs  commands.rs  constants.rs  http_errors.rs  mod.rs  models.rs  service.rs  shared.rs  store.rs  token_store.rs
src-tauri/src/clock/: mod.rs
src-tauri/src/commands/: dashboard.rs  mod.rs  navigation.rs  platform.rs  projects.rs  session.rs  settings.rs  tracking.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/db/: activity.rs  dashboard.rs  frontend_settings.rs  mod.rs  projects.rs  schema.rs  screenshots.rs  sessions.rs  settings.rs  sync_queue.rs  task_time.rs  tracking_inactivity_periods.rs  tracking_peripheral_events.rs  tracking_screenshots.rs  trackings.rs
src-tauri/src/idle/: constants.rs  mod.rs  persistence.rs  state.rs
src-tauri/src/integrity/: hash_chain.rs  mod.rs
src-tauri/src/projects/: api.rs  cache.rs  constants.rs  mod.rs
src-tauri/src/screenshot/: blur_policy.rs  constants.rs  mod.rs  process.rs  remote.rs  (+1 more)
(+132 files in other folders)
