[package]
name = "voowork-desktop"
version = "0.1.0"
description = "Voowork"
authors = ["Voowork"]
edition = "2021"

[lib]
name = "tauri_native_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dependencies]
log = "0.4"
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-log = "2.9"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust-s3 = { version = "0.37", default-features = false, features = ["tokio-rustls-tls", "fail-on-err"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
parking_lot = "0.12"
dirs = "6"
dotenvy = "0.15"
xcap = "0.4.1"
active-win-pos-rs = "0.11"
image = "0.25"
tauri-plugin-notification = "2"
keyring = "3"
webp = "0.3.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4"
user-idle3 = "0.7"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
